# Python_Task_IRC-Client

./: .gitignore  IRCClient.py  IRCHandler.py  README.md  channels_window_class.py  chat_recorder.py  chat_window_class.py  data_analyze.py  logger.py  main.py  pyproject.toml  test.py  window_class.py
